--- a/index.html
+++ b/index.html
@@ -1,95 +1,22 @@
-<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>MONITORING CENTRE</title>
-		<link rel="stylesheet" href="styles.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-	</head>
-	<body>
-		<div class="container">
-			<h1 class="header">
-				ACTIVATED 3600 <br />&nbsp;&nbsp; PENDING - 4  <br />W - 1420 NW - 2180
-			</h1>
-
-			<div class="titles">
-				<div class="title title-1"><h1>WELCOME</h1></div>
-				<div class="title title-2"><h1>TO</h1></div>
-				<div class="title title-3"><h1>MONITORING</h1></div>
-				<div class="title title-4"><h1>CENTRE</h1></div>
-			</div>
-			<ul class="blocks">
-				<li class="block-1 block"></li>
-				<li class="block-2 block"></li>
-				<li class="block-3 block"></li>
-				<li class="block-4 block"></li>
-				<li class="block-5 block"></li>
-				<li class="block-6 block"></li>
-			</ul>
-		</div>
-		<script>
-			TweenMax.staggerFrom(
-				".titles > div",
-				0.8,
-				{
-					x: "-60",
-					ease: Power3.easeInOut,
-					opacity: "0",
-				},
-				2
-			);
-
-			TweenMax.staggerTo(
-				".titles > div",
-				0.8,
-				{
-					x: "60",
-					ease: Power3.easeInOut,
-					delay: 1.2,
-					opacity: "0",
-				},
-				2
-			);
-			TweenMax.staggerFrom(
-				"li",
-				3,
-				{
-					x: "-1600",
-					delay: 4.2,
-					ease: Expo.easeInOut,
-				},
-				0.16
-			);
-
-			TweenMax.staggerTo(
-				"li",
-				2.6,
-				{
-					x: "1600",
-					delay: 6.8,
-					ease: Expo.easeInOut,
-				},
-				0.2
-			);
-
-			var textWrapper = document.querySelector(".header");
-			textWrapper.innerHTML = textWrapper.textContent.replace(
-				/\S/g,
-				"<span class='letter'>$&</span>"
-			);
-
-			anime.timeline().add({
-				targets: ".header .letter",
-				opacity: [0, 1],
-				translateY: [80, 0],
-				translateZ: 0,
-				easing: "easeOutExpo",
-				duration: 2000,
-				delay: (el, i) => 8400 + 40 * i,
-			});
-		</script>
-	</body>
+<head>
+  <link rel="stylesheet" href="index.css">
+  <title>E-CART 24/7</title>
+</head>
+<body>
+    <section>
+        <div class="form-box">
+            <div class="form-value">
+                <form action="">
+                    <h2>MCC Login</h2>
+                    
+                
+                    <button><a href="https://mc.py.gov.in/index.php">Log in</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
 </html>
