--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="index.css">
-  <title>E-CART 24/7</title>
+  <title>MONITORING CENTRE</title>
 </head>
 <body>
     <section>
