--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         <div class="form-box">
             <div class="form-value">
                 <form action="">
-                    <h2>MCC Login</h2>
-                    
-                
+                    <h2>MCC Login</h2> <br>               
                     <button><a href="https://mc.py.gov.in/index.php">Log in</button>
                 </form>
             </div>
