--- a/index.html
+++ b/index.html
@@ -1,20 +1,66 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <title>MONITORING CENTRE</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Sheets Table</title>
 </head>
 <body>
-    <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form action="">
-                    <h2>MCC Login</h2> <br>               
-                    <button><a href="https://mc.py.gov.in/index.php">Log in</button>
-                </form>
-            </div>
-        </div>
-    </section>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <table id="data-table" border="1">
+        <!-- Table headers will be dynamically added here -->
+    </table>
+
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script>
+
+        // Load the Google Sheets API
+        gapi.load('client', initClient);
+
+        function initClient() {
+            gapi.client.init({
+                apiKey: 'YOUR_API_KEY',
+                discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+            }).then(function () {
+                // Call your function to load data
+                loadData();
+            });
+        }
+
+        function loadData() {
+            gapi.client.sheets.spreadsheets.values.get({
+                spreadsheetId: 'YOUR_SPREADSHEET_ID',
+                range: 'Sheet1!A1:D10'  // Update with your sheet name and range
+            }).then(function(response) {
+                var values = response.result.values;
+                if (values.length > 0) {
+                    displayTable(values);
+                } else {
+                    console.log('No data found.');
+                }
+            });
+        }
+
+        function displayTable(data) {
+            var table = document.getElementById('data-table');
+
+            // Add headers
+            var headerRow = table.insertRow(0);
+            for (var i = 0; i < data[0].length; i++) {
+                var headerCell = headerRow.insertCell(i);
+                headerCell.textContent = data[0][i];
+            }
+
+            // Add data rows
+            for (var i = 1; i < data.length; i++) {
+                var row = table.insertRow(i);
+                for (var j = 0; j < data[i].length; j++) {
+                    var cell = row.insertCell(j);
+                    cell.textContent = data[i][j];
+                }
+            }
+        }
+
+    </script>
 </body>
 </html>
