--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
         function initClient() {
             gapi.client.init({
-                apiKey: '208568179464-uth7q43c7tjlph32b58do22mk9h9dt2a.apps.googleusercontent.com',
+                clientId: '835484921617-j9tu19u7a0c4pombrg3jsvoackt03a2o.apps.googleusercontent.com',  // Replace with your actual Client ID
                 discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+                scope: 'https://www.googleapis.com/auth/spreadsheets.readonly',
             }).then(function () {
                 // Call your function to load data
                 loadData();
@@ -28,16 +29,19 @@
         }
 
         function loadData() {
-            gapi.client.sheets.spreadsheets.values.get({
-                spreadsheetId: '1YjQMQRyJhrDDD3yf3ySHE5vuTCt9KnpSL8fI0lHLh68',
-                range: 'Sheet1!A1:T6000'  // Update with your sheet name and range
-            }).then(function(response) {
-                var values = response.result.values;
-                if (values.length > 0) {
-                    displayTable(values);
-                } else {
-                    console.log('No data found.');
-                }
+            gapi.auth2.getAuthInstance().signIn().then(function() {
+                // Authenticated, proceed with data loading
+                gapi.client.sheets.spreadsheets.values.get({
+                    spreadsheetId: '1YjQMQRyJhrDDD3yf3ySHE5vuTCt9KnpSL8fI0lHLh68',
+                    range: 'Sheet1!A1:T6000'
+                }).then(function(response) {
+                    var values = response.result.values;
+                    if (values.length > 0) {
+                        displayTable(values);
+                    } else {
+                        console.log('No data found.');
+                    }
+                });
             });
         }
 
