--- a/index.html
+++ b/index.html
@@ -1,70 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Sheets Table</title>
+	<base target="_top">
+	<!--INCLUDE REQUIRED EXTERNAL JAVASCRIPT AND CSS LIBRARIES-->
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap4.min.js"></script>
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css">
+
+	<?!= include('JavaScript'); ?><!--INCLUDE JavaScript.html FILE-->
 </head>
+
 <body>
-
-    <table id="data-table" border="1">
-        <!-- Table headers will be dynamically added here -->
-    </table>
-
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script>
-
-        // Load the Google Sheets API
-        gapi.load('client', initClient);
-
-        function initClient() {
-            gapi.client.init({
-                clientId: '835484921617-j9tu19u7a0c4pombrg3jsvoackt03a2o.apps.googleusercontent.com',  // Replace with your actual Client ID
-                discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-                scope: 'https://www.googleapis.com/auth/spreadsheets.readonly',
-            }).then(function () {
-                // Call your function to load data
-                loadData();
-            });
-        }
-
-        function loadData() {
-            gapi.auth2.getAuthInstance().signIn().then(function() {
-                // Authenticated, proceed with data loading
-                gapi.client.sheets.spreadsheets.values.get({
-                    spreadsheetId: '1YjQMQRyJhrDDD3yf3ySHE5vuTCt9KnpSL8fI0lHLh68',
-                    range: 'Sheet1!A1:T6000'
-                }).then(function(response) {
-                    var values = response.result.values;
-                    if (values.length > 0) {
-                        displayTable(values);
-                    } else {
-                        console.log('No data found.');
-                    }
-                });
-            });
-        }
-
-        function displayTable(data) {
-            var table = document.getElementById('data-table');
-
-            // Add headers
-            var headerRow = table.insertRow(0);
-            for (var i = 0; i < data[0].length; i++) {
-                var headerCell = headerRow.insertCell(i);
-                headerCell.textContent = data[0][i];
-            }
-
-            // Add data rows
-            for (var i = 1; i < data.length; i++) {
-                var row = table.insertRow(i);
-                for (var j = 0; j < data[i].length; j++) {
-                    var cell = row.insertCell(j);
-                    cell.textContent = data[i][j];
-                }
-            }
-        }
-
-    </script>
+	<div class="container">
+		<br>
+		<div class="row">
+			<table id="data-table" class="table table-striped table-sm table-hover table-bordered">
+				<!-- TABLE DATA IS ADDED BY THE showData() JAVASCRIPT FUNCTION ABOVE -->
+			</table>
+		</div>
+	</div>
 </body>
+
 </html>
