--- a/JavaScript.html
+++ b/JavaScript.html
@@ -34,7 +34,7 @@
           {"title":"DEALER NAME"},
           {"title":"REMARKS"},
           {"title":"ESIM RENEWAL DATE"},
-          {"title":"RENEWAL PROCESSED"},
+          {"title":"RENEWAL PROCESSED"}
         ]
       });
     });
