--- a/JavaScript.html
+++ b/JavaScript.html
@@ -28,13 +28,7 @@
           {"title":"VEHICLE MODEL"},
           {"title":"CHASSIS NUMBER"},
           {"title":"ENGINE NUMBER"},
-          {"title":"TAGGED-UNTAGGED IN MC PORTAL"},
-          {"title":"WORKING STATUS IN MC"},
-          {"title":"ACTIVATION STATUS IN VLTD"},
-          {"title":"DEALER NAME"},
-          {"title":"REMARKS"},
-          {"title":"ESIM RENEWAL DATE"},
-          {"title":"RENEWAL PROCESSED"}
+          {"title":"TAGGED-UNTAGGED IN MC PORTAL"}
         ]
       });
     });
