--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML form submit to Google Sheet</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+  body {
+    background-color: #f8f9fa;
+  }
+
+  .container {
+    margin-top: 50px;
+  }
+
+  h1 {
+    color: #007bff;
+  }
+
+  .card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .form-control {
+    border-radius: 5px;
+  }
+
+  button.btn-primary {
+    background-color: #28a745;
+    border-color: #28a745;
+  }
+
+  button.btn-primary:hover {
+    background-color: #218838;
+    border-color: #218838;
+  }
+</style>
+
 </head>
 
 <body>
