--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           </div>
 
           <button type="submit" class="btn btn-primary">Send</button>
+          <button type="button" class="btn btn-secondary" onclick="viewTable()">View Table</button>
         </form>
       </div>
     </div>
