--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <div class="form-boxes">
 <div class="form-value">
                 <form action="">
-                    <h2>Ecart-247 Sign up</h2>
+                    <h2>SOS ALERTS</h2>
 <div class="form-value">
 	<div class="r_form">
 			<form>
@@ -53,7 +53,7 @@
    </div>  </div>
 				
 				
-				<button> <a href="firstlogin.html"> Register Now</button>
+				<button>submit</button>
 			</form>
 		</div>
 
