--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           </div>
 
           <div class="mb-3">
-            <input name="Vehicle Number" type="text" class="form-control" placeholder="vehicle number" required>
+            <input name="Vehicle Number" type="text" class="form-control" placeholder="Vehicle number" required>
           </div>
 
           <div class="mb-3">
-            <input name="Total alerts received" type="number" class="form-control" placeholder="Total alerts received" required>
+            <input name="Total alerts received" type="number" class="form-control" placeholder="Total Alerts Received" required>
           </div>
 
           <button type="submit" class="btn btn-primary">Send</button>
