--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML form submit to Google Sheet</title>
+  <title>SOS ALERTS FORM</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="your_other_css_file.css"> <!-- Replace with the path to your other CSS file -->
+  <style>
+    /* Add your custom styles here if needed */
+  </style>
 </head>
 
 <body>
   <div class="container text-center">
     <br>
-    <h1>HTML form submit to Google Sheet</h1>
+    <h1>SOS ALERTS CALCULATION</h1>
     <br>
     <div class="card mx-auto" style="width: 18rem;">
       <div class="card-body">
@@ -41,24 +44,21 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
-
-
   <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbxT0quY7-3sX_4y-fBhR1upUeAl6vLJ9f_I9w9tuvCrIZ9eduLmiQFUvFZ3zzb2PGgw/exec'
     const form = document.forms['submit-to-google-sheet']
 
     form.addEventListener('submit', e => {
-      e.preventDefault()
+      e.preventDefault();
       fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-        .then(response => console.log('Success!', response))
+        .then(response => {
+          console.log('Success!', response);
+          alert('Data is Saved'); // Show a popup
+          location.reload(); // Refresh the page
+        })
         .catch(error => console.error('Error!', error.message))
-    })
+    });
   </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
