--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="card-body">
         <form name="submit-to-google-sheet">
           <div class="mb-3">
-            <input name="date" type="date" class="form-control" required>
+            <input name="date" type="date" class="form-control" placeholder="Date" required>
           </div>
 
           <div class="mb-3">
