--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SOS ALERTS FORM</title>
+  <title>Reason Submission Form</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="your_other_css_file.css"> <!-- Replace with the path to your other CSS file -->
   <style>
     /* Add your custom styles here if needed */
   </style>
@@ -15,67 +14,58 @@
 <body>
   <div class="container text-center">
     <br>
-    <h1>SOS ALERTS CALCULATION</h1>
+    <h1>Reason Submission Form</h1>
     <br>
     <div class="card mx-auto" style="width: 18rem;">
       <div class="card-body">
-        <form name="submit-to-google-sheet">
-          <div class="mb-3">
-            <input name="date" type="date" class="form-control" placeholder="Date" required>
-          </div>
-
-          <div class="mb-3">
-            <input name="OEM Name" type="text" class="form-control" placeholder="OEM Name" required>
-          </div>
-
-          <div class="mb-3">
-            <input name="Vehicle Number" type="text" class="form-control" placeholder="Vehicle number" required>
-          </div>
-
-          <div class="mb-3">
-            <input name="Total alerts received" type="number" class="form-control" placeholder="Total Alerts Received" required>
-          </div>
-
-          <div class="mb-3">
-            <textarea name="Reason" class="form-control" placeholder="Reason" required></textarea>
-          </div>
-
-          <button type="submit" class="btn btn-primary">Send</button>
-        </form>
-
-        <div id="existing-data-container">
-          <h2>Existing Data</h2>
-          <ul id="existing-data-list"></ul>
+        <!-- Display existing data from row 2 -->
+        <div class="mb-3">
+          <label for="vehicleNumber">Vehicle Number:</label>
+          <input id="vehicleNumber" type="text" class="form-control" value="A2" disabled>
         </div>
+
+        <div class="mb-3">
+          <label for="imei">IMEI:</label>
+          <input id="imei" type="text" class="form-control" value="B2" disabled>
+        </div>
+
+        <div class="mb-3">
+          <label for="ownerMobile">Owner Mobile:</label>
+          <input id="ownerMobile" type="text" class="form-control" value="C2" disabled>
+        </div>
+
+        <div class="mb-3">
+          <label for="lastDataReceived">Last Data Received:</label>
+          <input id="lastDataReceived" type="text" class="form-control" value="D2" disabled>
+        </div>
+
+        <!-- Form to submit reason -->
+        <form name="submit-reason-form">
+          <div class="mb-3">
+            <label for="reason">Reason:</label>
+            <textarea id="reason" name="reason" class="form-control" placeholder="Enter reason" required></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Submit Reason</button>
+        </form>
       </div>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const scriptURL = 'YOUR_DEPLOYED_WEB_APP_URL'; // Replace with the URL you copied in Step 2
-    const form = document.forms['submit-to-google-sheet'];
-    const existingDataList = document.getElementById('existing-data-list');
-
-    // Fetch existing data when the page loads
-    fetch(scriptURL + '?action=getData')
-      .then(response => response.json())
-      .then(data => {
-        // Process and display existing data
-        data.forEach(entry => {
-          const listItem = document.createElement('li');
-          listItem.textContent = `${entry[0]} | ${entry[1]} | ${entry[2]} | ${entry[3]} | ${entry[4]}`;
-          existingDataList.appendChild(listItem);
-        });
-      })
-      .catch(error => console.error('Error fetching data:', error));
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxT0quY7-3sX_4y-fBhR1upUeAl6vLJ9f_I9w9tuvCrIZ9eduLmiQFUvFZ3zzb2PGgw/exec'; // Replace with the URL you copied in Step 2
+    const form = document.forms['submit-reason-form'];
 
     form.addEventListener('submit', e => {
       e.preventDefault();
-      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+      const reasonInput = document.getElementById('reason');
+
+      // Fetch existing data when the page loads
+      fetch(scriptURL + '?action=submitReason&reason=' + encodeURIComponent(reasonInput.value))
         .then(response => {
           console.log('Success!', response);
-          alert('Data is Saved');
+          alert('Reason Submitted');
           location.reload();
         })
         .catch(error => console.error('Error!', error.message));
