--- a/index.html
+++ b/index.html
@@ -18,8 +18,26 @@
     <br>
     <div class="card mx-auto" style="width: 18rem;">
       <div class="card-body">
-        <!-- Display existing data from spreadsheet -->
-        <div id="existing-data-container"></div>
+        <!-- Display existing data from row 2 -->
+        <div class="mb-3">
+          <label for="vehicleNumber">Vehicle Number:</label>
+          <input id="vehicleNumber" type="text" class="form-control" value="A2" disabled>
+        </div>
+
+        <div class="mb-3">
+          <label for="imei">IMEI:</label>
+          <input id="imei" type="text" class="form-control" value="B2" disabled>
+        </div>
+
+        <div class="mb-3">
+          <label for="ownerMobile">Owner Mobile:</label>
+          <input id="ownerMobile" type="text" class="form-control" value="C2" disabled>
+        </div>
+
+        <div class="mb-3">
+          <label for="lastDataReceived">Last Data Received:</label>
+          <input id="lastDataReceived" type="text" class="form-control" value="D2" disabled>
+        </div>
 
         <!-- Form to submit reason -->
         <form name="submit-reason-form">
@@ -36,32 +54,14 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxT0quY7-3sX_4y-fBhR1upUeAl6vLJ9f_I9w9tuvCrIZ9eduLmiQFUvFZ3zzb2PGgw/exec';
-
+    const scriptURL = ''; // Replace with the URL you copied in Step 2
     const form = document.forms['submit-reason-form'];
-    const existingDataContainer = document.getElementById('existing-data-container');
-
-    // Fetch existing data when the page loads
-    fetch(scriptURL + '?action=getExistingData')
-      .then(response => response.json())
-      .then(data => {
-        // Process and display existing data
-        data.forEach(entry => {
-          const entryDiv = document.createElement('div');
-          entryDiv.innerHTML = `<strong>${entry[0]}</strong>: ${entry[1]} | 
-                                <strong>${entry[2]}</strong>: ${entry[3]} | 
-                                <strong>${entry[4]}</strong>: ${entry[5]} | 
-                                <strong>${entry[6]}</strong>: ${entry[7]}`;
-          existingDataContainer.appendChild(entryDiv);
-        });
-      })
-      .catch(error => console.error('Error fetching data:', error));
 
     form.addEventListener('submit', e => {
       e.preventDefault();
       const reasonInput = document.getElementById('reason');
 
-      // Submit reason
+      // Fetch existing data when the page loads
       fetch(scriptURL + '?action=submitReason&reason=' + encodeURIComponent(reasonInput.value))
         .then(response => {
           console.log('Success!', response);
