--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const scriptURL = ''; // Replace with the URL you copied in Step 2
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxT0quY7-3sX_4y-fBhR1upUeAl6vLJ9f_I9w9tuvCrIZ9eduLmiQFUvFZ3zzb2PGgw/exec'; // Replace with the URL you copied in Step 2
     const form = document.forms['submit-reason-form'];
 
     form.addEventListener('submit', e => {
