--- a/index.html
+++ b/index.html
@@ -5,60 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OEM Login</title>
     <style>
-        body {
-            background-image: url('your-background-image-url.jpg'); /* Replace with your background image URL */
-            background-size: cover;
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h2 {
-            color: #fff;
-        }
-
-        #loginForm {
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #333;
-        }
-
-        select, input {
+        /* ... Your existing CSS ... */
+        table {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        #dataDisplay {
-            color: #333;
+            border-collapse: collapse;
             margin-top: 20px;
+        }
+
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
         }
     </style>
 </head>
@@ -68,27 +25,30 @@
     <h2>OEM Login</h2>
 
     <form>
-        <label for="username">OEM Name:</label>
-        <select id="username" name="username">
-            <!-- Add your OEM names as options in the dropdown -->
-            <option value="oem1">OEM 1</option>
-            <option value="oem2">OEM 2</option>
-            <!-- Add more options as needed -->
-        </select>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-
-        <input type="checkbox" onclick="showPassword()"> Show Password
+        <!-- ... Your existing form elements ... -->
 
         <button type="button" onclick="login()">Login</button>
     </form>
 
     <div id="dataDisplay" style="display: none;">
-        <!-- Display data here based on the selected OEM name -->
         <h3>Data for OEM: <span id="selectedOEM"></span></h3>
-        <!-- Add table or other elements to display the data -->
-        <!-- You will need to dynamically update this content using JavaScript -->
+        <table id="dataTable">
+            <thead>
+                <tr>
+                    <th>Vehicle Number</th>
+                    <th>Mobile Number</th>
+                    <th>Texts</th>
+                    <th>OEM Name</th>
+                    <!-- Add more columns as needed -->
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Data rows will be dynamically added here -->
+            </tbody>
+        </table>
+        <label for="reason">Reason for Not Working:</label>
+        <textarea id="reason" name="reason" rows="4" cols="50"></textarea><br>
+        <button type="button" onclick="submitReason()">Submit Reason</button>
     </div>
 </div>
 
@@ -111,21 +71,40 @@
             document.getElementById('loginForm').style.display = 'none';
             document.getElementById('dataDisplay').style.display = 'block';
 
-            // Fetch and display data based on the selected OEM name
-            // You will need to implement this part based on your backend logic
-            // Update the content of dataDisplay using JavaScript
+            // Simulated data for display (replace this with your backend logic)
+            const data = [
+                ['Vehicle1', '123-456-7890', 'Some Text 1', 'oem1'],
+                ['Vehicle2', '987-654-3210', 'Some Text 2', 'oem1'],
+                ['Vehicle3', '555-123-4567', 'Some Text 3', 'oem2'],
+                // Add more data as needed
+            ];
+
+            displayData(data);
         } else {
             alert('Incorrect password. Please try again.');
         }
     }
 
-    function showPassword() {
-        const passwordInput = document.getElementById('password');
-        if (passwordInput.type === 'password') {
-            passwordInput.type = 'text';
-        } else {
-            passwordInput.type = 'password';
+    function displayData(data) {
+        const tableBody = document.getElementById('dataTable').getElementsByTagName('tbody')[0];
+
+        // Clear existing rows
+        tableBody.innerHTML = '';
+
+        // Populate table with data
+        for (const row of data) {
+            const newRow = tableBody.insertRow(tableBody.rows.length);
+            for (const cellData of row) {
+                const newCell = newRow.insertCell(newRow.cells.length);
+                newCell.innerHTML = cellData;
+            }
         }
+    }
+
+    function submitReason() {
+        const reason = document.getElementById('reason').value;
+        alert(`Reason submitted: ${reason}`);
+        // You can add logic here to send the reason to the backend
     }
 </script>
 
