--- a/index.html
+++ b/index.html
@@ -5,7 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OEM Login</title>
     <style>
-        /* ... Your existing CSS ... */
+        body {
+            background-image: url('your-background-image-url.jpg'); /* Replace with your background image URL */
+            background-size: cover;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h2 {
+            color: #fff;
+        }
+
+        #loginForm {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #333;
+        }
+
+        select, input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        #dataDisplay {
+            color: #333;
+            margin-top: 20px;
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
@@ -17,6 +72,15 @@
             text-align: left;
             border-bottom: 1px solid #ddd;
         }
+
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
@@ -25,7 +89,18 @@
     <h2>OEM Login</h2>
 
     <form>
-        <!-- ... Your existing form elements ... -->
+        <label for="username">OEM Name:</label>
+        <select id="username" name="username">
+            <!-- Add your OEM names as options in the dropdown -->
+            <option value="oem1">OEM 1</option>
+            <option value="oem2">OEM 2</option>
+            <!-- Add more options as needed -->
+        </select>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <input type="checkbox" onclick="showPassword()"> Show Password
 
         <button type="button" onclick="login()">Login</button>
     </form>
@@ -98,6 +173,15 @@
                 const newCell = newRow.insertCell(newRow.cells.length);
                 newCell.innerHTML = cellData;
             }
+        }
+    }
+
+    function showPassword() {
+        const passwordInput = document.getElementById('password');
+        if (passwordInput.type === 'password') {
+            passwordInput.type = 'text';
+        } else {
+            passwordInput.type = 'password';
         }
     }
 
