--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>OEM Login</title>
     <style>
         body {
-            background-image: url('your-background-image-url.jpg'); /* Replace with your background image URL */
+            background-image: url('img.jpg'); /* Replace with your background image URL */
             background-size: cover;
             font-family: 'Arial', sans-serif;
             margin: 0;
