--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
             </div>
             <div class="col-md-5">
                 <div class="slick-about">
-                    <img src="img/blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
-                    <img src="img/blog-2.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 2"/>
-                    <img src="img/blog-3.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 3"/>
+                    <img src="blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
+                    <img src="blog-2.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 2"/>
+                    <img src="blog-3.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 3"/>
                 </div>
             </div>
         </div>
