--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="#">
-                        <img class="card-img-top img-raised" src="img/blog-1.jpg" alt="Blog 1">
+                        <img class="card-img-top img-raised" src="blog-1.jpg" alt="Blog 1">
                     </a>
                     <div class="card-body">
                         <a href="#" class="card-title mb-2"><h5>We launch new iOS & Android mobile apps</h5></a>
@@ -322,7 +322,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="#">
-                        <img class="card-img-top img-raised" src="img/blog-2.jpg" alt="Blog 2">
+                        <img class="card-img-top img-raised" src="blog-2.jpg" alt="Blog 2">
                     </a>
                     <div class="card-body">
                         <a href="#" class="card-title mb-2"><h5>New update is available for the editor</h5></a>
@@ -335,7 +335,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="#">
-                        <img class="card-img-top img-raised" src="img/blog-3.jpg" alt="Blog 3">
+                        <img class="card-img-top img-raised" src="blog-3.jpg" alt="Blog 3">
                     </a>
                     <div class="card-body">
                         <a href="#" class="card-title mb-2"><h5>The story of building #1 page builder</h5></a>
