--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#features">Features</a>
+                        <a class="nav-link page-scroll" href="https://youtu.be/lHFX4KeVVOg">Features</a>
                 </ul>
             </div>
         </nav>
